--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
         <div class="container">
           <div class="row my-5">
-              <div class="col-lg-7 About-Section">
+              <div class="col-lg-7">
                   <div class="about-us-left">
                       <h2 class="mb-4">About Us</h2>
                       <p><strong>
@@ -281,7 +281,7 @@
 
                <div class="col-lg-5">
                   <div class="about-us-right">
-                      <img src="Images/b.png" alt="" class="img-fluid">
+                      <img src="Images/About-us-imag.png" alt="" class="img-fluid">
                   </div>
               </div>
           </div>
@@ -300,32 +300,27 @@
                   <div class="contact-us">
                       <h2>Contact Us</h2>
                       <p>If you have any questions or need assistance, please don't hesitate to reach out to us. Our dedicated customer service team is here to help you with any inquiries you may have about our products, services, or your order. You can contact us via phone, email, or by filling out the contact form on our website. We strive to respond to all inquiries promptly and provide you with the best possible support. Your satisfaction is our top priority, and we look forward to assisting you!</p>
-                      <p><strong>Phone:</strong> +92-300-1234567</p>
-                      <p><strong>Email:</strong>
-                      <p><strong>Address: 32 Bano Bazar Link Rd, near moti masjid, Rahim Yar Khan, 64200, Pakistan</strong>
+                      <p><strong>Phone:</strong> +92 3061339140</p>
+                      <p><strong>Email:</strong> dawoodtrader@gmail.com</p>
+                      <p><strong>Address: </strong> 32 Bano Bazar Link Rd, near moti masjid, Rahim Yar Khan, 64200, Pakistan</p>
               </div>
           </div>
 
            <div class="col-lg-5">
-                  <div class="contact-us">
-                      <h2>Contact Us</h2>
-              </div>
+                 
           </div>
       </div>
+    </div>
 
-
-      <div class="container">
+     <div class="container-fluid footer-color mt-5">
           <div class="row">
               <div class="col-lg-12">
                   <div class="footer">
-                      <h3>© 2024 Dawood Trader. All rights reserved.</h3>
+                      <h5>© 2025-2026 Dawood Trader. All rights reserved.</h5>
                   </div>
               </div>
           </div>
       </div>
-
-
-    </div>
 
       <!-- contact us section     -->
 
